k8s/cert-manager/04-ingress-challenge.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mail-challenge-ingress
  namespace: mail-stack
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: mail.k8s.malagasy.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: roundcube-service
            port:
              number: 80
